--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -37,3 +37,27 @@
     font-size: max(1vw, 13px);
     border-radius: 50px;
 }
+
+/* media queries */
+
+@media (max-width:1080px) {
+
+
+    .header-contents {
+        max-width: 45%;
+    }
+}
+
+@media (max-width:810px) {
+    .header-contents {
+        max-width: 65%;
+    }
+
+    .header-contents p {
+        display: none;
+    }
+
+    .header-contents button {
+        padding: 2vw 4vw;
+    }
+}
