--- a/frontend/src/components/exploreMenu/ExploreMenu.css
+++ b/frontend/src/components/exploreMenu/ExploreMenu.css
@@ -55,3 +55,13 @@
     padding: 2px;
     border-radius: 50%;
 }
+
+/* media queries */
+
+@media (max-width:1080px) {
+    .explore-menu {
+        max-width: 100%;
+        font-size: 14px;
+    }
+
+}
