--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -2,6 +2,7 @@
     color: #d9d9d9;
     background-color: #323232;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     gap: 20px;
@@ -53,4 +54,18 @@
     margin: 20px 0;
     background-color: gray;
     border: none;
+}
+
+/* media queries */
+
+@media (max-width:810px) {
+    .footer-content {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+
+    .footer-copyright {
+        text-align: center;
+    }
 }
