--- a/frontend/src/Pages/placeOrder/PlaceOrder.css
+++ b/frontend/src/Pages/placeOrder/PlaceOrder.css
@@ -39,3 +39,20 @@
 .place-order .cart-total button {
     margin-top: 30px;
 }
+
+/* media queries */
+
+@media screen and (max-width: 768px) {
+    .place-order {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .place-order-left {
+        max-width: 100%;
+    }
+
+    .place-order-right {
+        max-width: 100%;
+    }
+}
